--- a/package.json
+++ b/package.json
@@ -6,22 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "seed": "node prisma/seed.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "next": "14.2.15",
-    "prosemirror-example-setup": "^1.2.3",
-    "prosemirror-model": "^1.23.0",
-    "prosemirror-schema-basic": "^1.2.3",
-    "prosemirror-schema-list": "^1.4.1",
-    "prosemirror-state": "^1.4.3",
-    "prosemirror-view": "^1.34.3",
     "react": "^18",
     "react-datepicker": "^7.5.0",
-    "react-dom": "^18",
-    "react-rte": "^0.16.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
